@@ -1,3 +1,4 @@
+<div>
 {if $anomalies|@count>0}
 {foreach from=$anomalies key=s item=anom}
     <div>
@@ -7,3 +8,4 @@
     </div>
 {/foreach}
 {/if}
+</div>
