@@ -85,14 +85,15 @@
 					<li>Score:</li>
 					<ul>
 						<li>As you know we expect everyone to contribute to the alliance in some way.</li>
-						<li>Score is an attempt to measure this based on a few metrics, some of wich are:</li>
+						<li>Score is an attempt to measure this based on these metrics:</li>
 						<ul>
 							<li>How much game time do you have?</li>
-							<li>How much you scan?</li>
+							<li>How many kills are you getting?</li>
+							<li>How much do you scan?</li>
 							<li>Do you fly logi or other support ships in fleets?</li>
 						</ul>
-						<li><b>Score is <u>not</u> meant to be a hard limit but more of an <u>indication</u> to help leadership provide insight in whats going on, as there are other ways to contribute that are hard to measure.</b></li>
 					</ul>
+					<li style="color: #cc0000;"><b>Score is <u>not</u> a hard limit but a tool to get insight in our activity levels!</b></li>
 					<li style="color: #0088ff;"><b>Please contact (corp) leadership for any questions / concerns.</b></li>
 				{/if}
 			</ul>
